# Edge-Radar

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: DATA_ANALYST.md  KALSHI_BETTOR.md  MARKET_RESEARCHER.md  PORTFOLIO_MONITOR.md  RISK_MANAGER.md  TRADE_EXECUTOR.md
.claude/html/: Edge-Radar_Data_Flow.html  dataflow.html  index.html  index2.html
.claude/memory/: MEMORY.md  feedback_pr_review.md  project_daily_scan.md  project_scheduler_framework.md  user_profile.md
.github/workflows/: deploy.yml
app/: __init__.py  config.py
app/domain/: __init__.py  execution.py  opportunity.py  risk.py
data/history/: README.md
data/watchlists/: kalshi_opportunities.json
docs/: ARCHITECTURE.md  BETTING_GUIDE.md  CHANGELOG.md  HOARDER_MULTIPLAYER_DESIGN.md  KALSHI_API_REFERENCE.md  KALSHI_STRATEGY_PLAN.md  SCRIPTS_REFERENCE.md  USER_GUIDE.md
docs/enhancements/: EDGE_OPTIMIZATION_ROADMAP.md  (+1 more)
scripts/: __init__.py  bootstrap.py  doctor.py  edge_detector.py  fetch_market_data.py  fetch_odds.py  kalshi_client.py  kalshi_executor.py  kalshi_settler.py  make_favicon.py  scan.py
tests/: conftest.py  test_backtester.py  test_config.py  test_domain.py  test_edge_detection.py  test_fill_accounting.py  test_import_smoke.py  test_lint_config_centralization.py  test_odds_api.py  test_odds_cache.py  test_reconciliation.py  test_risk_gates.py  test_scan_cache.py  test_ticker_display.py  test_weather.py
webapp/: app.py  favorites.py  services.py  theme.py
(+192 files in other folders)
